--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "langchain-community>=0.4",
     "langchain-huggingface>=1.0.0",
     "numpy>=2.3.4",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "pytest>=8.4.2",
     "python-dotenv>=1.1.1",
     "rapidfuzz>=3.14.1",
     "sentence-transformers>=5.1.1",
